# SRendererLab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  framework.drawio  note.md
dep/: CMakeLists.txt
image/: scene.pptx
image/1.6texture/: note.txt
image/1.7camera/: note.txt
lib/Debug/: libmath.lib
src/: CMakeLists.txt  main.cpp  main.h
src/Algorithm/: Clip.cpp  Clip.h  ColorAlgorithm.cpp  ColorAlgorithm.h  Common.cpp  Common.h  DrawLine.cpp  DrawLine.h  DrawTriangle.cpp  DrawTriangle.h  ToneMapping.cpp  ToneMapping.h
src/Core/: Application.cpp  Application.h  Base.cpp  Base.h  Config.cpp  Config.h  KeyCode.h  RenderLoop.cpp  RenderLoop.h  Transformation.cpp  Transformation.h
src/Math/: Mat.h  Mat3x3.cpp  Mat3x3.h  Mat4x4.cpp  Mat4x4.h  MathGroup.h  MathUtils.cpp  MathUtils.h  Quaternion.cpp  Quaternion.h  Vec.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/Render/: BasicCamera.cpp  BasicCamera.h  Camera.cpp  Camera.h  CorePipeline.cpp  CorePipeline.h  DeferredPipeline.h  DepthBuffer.cpp  DepthBuffer.h  FPSCamera.cpp  FPSCamera.h  FrameBuffer.cpp  FrameBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NaiveCamera.cpp  NaiveCamera.h  Object.h  Pipeline.cpp  Pipeline.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Sence.cpp  ShaderData.cpp  ShaderData.h  ShadowPipeline.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Vertex.cpp  Vertex.h
src/Shader/: CartoonShader.cpp  CartoonShader.h  GouraudShader.cpp  GouraudShader.h  NormalShader.cpp  NormalShader.h  PBRShader.cpp  PBRShader.h  PhongShader.cpp  PhongShader.h  Shader.cpp  Shader.h  ShaderGroup.h  SimpleShader.cpp  SimpleShader.h  SkyBoxShader.cpp  SkyBoxShader.h  TextureShader.cpp  TextureShader.h
src/UI/: Float3Widget.ui  FloatWidget.cpp  FloatWidget.h  FloatWidget.ui  colorimgwidget.cpp  colorimgwidget.h  colorimgwidget.ui  imageWidget.cpp  imageWidget.h  imagelabel.cpp  imagelabel.h  lightwidget.cpp  lightwidget.h  lightwidget.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  modelwidget.cpp  modelwidget.h  modelwidget.ui  modelwidget.ui.autosave  tabwidget.cpp  tabwidget.h  window.cpp  window.h  window.ui
src/UI/App/: RenderApp.cpp  RenderApp.h
src/UI/Common/: CommandBase.h  any.h
src/UI/View/: Float3Widget.cpp  Float3Widget.h  Float3Widget.ui  FloatWidget.cpp  FloatWidget.ui  ImageSlider.cpp  ImageSlider.h  ImageSlider.ui  colorimgwidget.cpp  colorimgwidget.h  colorimgwidget.ui  colorwidget.cpp  colorwidget.h  colorwidget.ui  configwidget.cpp  configwidget.h  configwidget.ui  imageWidget.cpp  imageWidget.h  imagepanel.cpp  imagepanel.h  imagepanel.ui  lightwidget.cpp  lightwidget.h  lightwidget.ui  mainwidget.cpp  mainwidget.h  mainwidget.ui  modelwidget.cpp  modelwidget.h  modelwidget.ui  tabwidget.cpp  tabwidget.h
src/UI/View/Sinks/: NewLightPropertySink.cpp  NewLightPropertySink.h
src/UI/ViewModels/: ViewModel.cpp  ViewModel.h
src/UI/ViewModels/Commands/: NewLightPropertyCommand.cpp  NewLightPropertyCommand.h
src/UI/ViewModels/Sinks/: VIewModelSink.h  ViewModelSink.cpp
test/mathTest/: CMakeLists.txt  mathTest.cpp  mathTestNew.cpp
test/modelTest/: CMakeLists.txt  modelTest.cpp
